--- a/testbed/software/RobotManager/extensions/control_gui/src/lib/widget-styles.css
+++ b/testbed/software/RobotManager/extensions/control_gui/src/lib/widget-styles.css
@@ -269,126 +269,6 @@
     border-top: 5px solid rgba(0, 0, 0, 0.75);
 }
 
-
-/* =======================
-   Multi-Select Widget
-   ======================= */
-/*.multiSelectWidget {*/
-/*    position: relative;*/
-/*    border: 1px solid #444;*/
-/*    width: 100%;*/
-/*    min-width: 48px;*/
-/*    background-color: #333;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    touch-action: none;*/
-/*    font-size: 16px;*/
-/*}*/
-
-/*.multiSelectWidget select {*/
-/*    width: 100%;*/
-/*    background: transparent;*/
-/*    color: inherit;*/
-/*    border: none;*/
-/*    outline: none;*/
-/*    appearance: none;*/
-/*    -webkit-appearance: none;*/
-/*    text-align: center;*/
-/*    text-align-last: center;*/
-/*    padding: 0;*/
-/*    margin: 0;*/
-/*    line-height: 1;*/
-/*    font-size: inherit;*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*.msSelectDropdown {*/
-/*    position: absolute;*/
-/*    right: 5px;*/
-/*    bottom: 2px;*/
-/*    pointer-events: none;*/
-/*    font-size: 9px;*/
-/*    color: #ccc;*/
-/*}*/
-
-/*.msSelectTitle {*/
-/*    position: absolute;*/
-/*    top: 2px;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    text-align: center;*/
-/*    font-size: 12px;*/
-/*    font-weight: bold;*/
-/*    pointer-events: none;*/
-/*}*/
-
-/*!* --- hook layout by data-attribute --- *!*/
-/*.multiSelectWidget[data-title-position="top"] {*/
-/*    !* default: title above, centered *!*/
-/*    display: block;*/
-/*    padding-top: 24px; !* make room for the title *!*/
-/*    justify-content: center;*/
-/*}*/
-
-/*.multiSelectWidget[data-title-position="top"] .msSelectTitle {*/
-/*    position: absolute;*/
-/*    top: 2px;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    text-align: center;*/
-/*    font-size: 12px;*/
-/*}*/
-
-/*!* --- when titlePosition = left --- *!*/
-/*.multiSelectWidget[data-title-position="left"] {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: space-between;*/
-/*    padding: 0 8px;*/
-/*}*/
-
-/*.multiSelectWidget[data-title-position="left"] .msSelectTitle {*/
-/*    position: static; !* flow in the flex row *!*/
-/*    margin-right: 8px;*/
-/*    font-size: 14px; !* a bit bigger *!*/
-/*    text-align: left;*/
-/*    font-weight: normal;*/
-/*}*/
-
-/*.multiSelectWidget[data-title-position="left"] .msSelectValue {*/
-/*    flex: 1;*/
-/*    text-align: right;*/
-/*    padding-right: 8px;*/
-/*}*/
-
-/*!* ensure arrow stays at right edge *!*/
-/*.multiSelectWidget[data-title-position="left"] .msSelectDropdown {*/
-/*    right: 5px;*/
-/*    bottom: 2px;*/
-/*}*/
-
-/*!* -----------------------------*/
-/*   Multi-Select: top-title tweaks*/
-/*   ----------------------------- *!*/
-/*.multiSelectWidget[data-title-position="top"] {*/
-/*    display: block; !* your existing rule *!*/
-/*    padding-top: 24px; !* your existing rule *!*/
-/*    text-align: center; !* ← center all inline content *!*/
-/*}*/
-
-/*.multiSelectWidget[data-title-position="top"] .msSelectValue {*/
-/*    display: block; !* span will now fill the width *!*/
-/*    width: 100%; !* so its text-align applies *!*/
-/*    text-align: center; !* ← center the value text *!*/
-/*}*/
-/* =======================
-   Multi-Select Widget
-   ======================= */
-/* ================================
-   Multi-Select Widget (all styles)
-   ================================ */
-
 /* 1) Base container (shared by both “top” and “left”) */
 .multiSelectWidget {
     position: relative;
@@ -893,7 +773,11 @@
 /* Title */
 .textWidget .textTitle {
     /* small bold header */
-    font-size: 0.75em;
+    /*font-size: 0.75em;*/
+    font-size: 12px;
+    font-style: normal;
+    font-family: inherit;
+    color: #fff;
     font-weight: bold;
     margin-bottom: 0.25em;
 }
@@ -903,6 +787,7 @@
     white-space: pre-wrap; /* respect \n in text */
     word-break: break-word; /* wrap long words */
     text-align: inherit; /* inherit alignment */
+    padding: 3px
 }
 
 
